infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ecommerce-fullstack.dev
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend-srv
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: backend-srv
              servicePort: 8080
